--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     </div>
     
     <div class="banner">
+
+        <button class='signout'>Sign Out</button>
+
         <div class="card">
 
             <div class="card-body">
@@ -49,8 +52,12 @@
                 </div>
             </div>
         </div>
+
     </div>
+
     <script src="https://kit.fontawesome.com/547994bb66.js" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
+
+<h1></h1>
